--- a/theme/partials/footer.html
+++ b/theme/partials/footer.html
@@ -44,7 +44,7 @@
             {{ config.copyright }}
           </div>
         {% endif %}
-        Copyright &copy; North Shore Water Commission - 2017
+        <a href="http://northshorewater.org">Copyright &copy; North Shore Water Commission - 2017</a>
 
       </div>
       {% block social %}
