--- a/site/css/extra.css
+++ b/site/css/extra.css
@@ -1,5 +1,5 @@
     #sticker {
-      background: #bada55;
+      background: #DDE9F5;
       color: white;
       font-family: Droid Sans;
       font-size: 18px;
